# LPC

./: .gitignore  CMakeLists.txt  README.md  code_style.sh
.github/workflows/: ci.yaml
board/: Board.cpp  Board.hpp  CMakeLists.txt  Move.hpp  Piece.hpp
checkers-logic/: Board.cpp  Board.hpp  CMakeLists.txt  Checkers.cpp  Checkers.hpp  Move.hpp  Piece.cpp  Piece.hpp  Position.hpp
engine/: CMakeLists.txt  Engine.hpp  EvaluationFunction.cpp  MinimaxEngine.cpp  MinimaxEngine.hpp  RandomEngine.cpp  RandomEngine.hpp
game/: Board.cpp  Board.hpp  CMakeLists.txt  Move.hpp  Piece.hpp
gui/: Button.cpp  Button.hpp  CMakeLists.txt  Game.cpp  Game.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  ResourceManager.cpp  ResourceManager.hpp  State.hpp  StateManager.cpp  StateManager.hpp  main.cpp
src/: Move.hpp  main.cpp
